cmake_minimum_required(VERSION 2.8)
set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11 -Wall")

project(week2)
 add_subdirectory(contests/week2-/solutions)

project(week3)
 add_subdirectory(contests/week3-/solutions)

project(week4)
 add_subdirectory(labs/week4-/solutions)

 project(week5)
 add_subdirectory(contests/week5-/solutions)

project(lab6)
 add_subdirectory(labs/week6-/solutions/wiki_stats)